--- a/frontend/src/pages/Product/Product.css
+++ b/frontend/src/pages/Product/Product.css
@@ -157,7 +157,6 @@
 .product-wrapper .right-wrapper {
   position: sticky;
   top: 25px;
-  z-index: 999;
   height: 100%;
 }
 
